--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,11 @@
 [package]
 name = "gobbldygook-examine-rust"
 version = "0.1.0"
-authors = ["Hawken Rives <rives@stolaf.edu>"]
+authors = ["Hawken Rives <hawkrives@fastmail.fm>"]
 
 [dependencies]
+serde = "1.0"
+serde_derive = "1.0"
+serde_yaml = "0.8"
+serde_json = "1.0"
+peg = "0.5"
