--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,4 @@ serde_derive = "1.0"
 serde_yaml = "0.8"
 serde_json = "1.0"
 structopt = "0.2"
+ordered-float = {version = "1.0", features = ["serde"]}
